@@ -1,6 +1,12 @@
 2009-03-18  Dan Williams  <dcbw@redhat.com>
 
 	* properties/auth-helpers.c
+		- (auth_widget_update_connection): actually save local IP address
+			for static key connections
+
+2009-03-18  Dan Williams  <dcbw@redhat.com>
+
+	* properties/auth-helpers.c
 		- (populate_hmacauth_combo): fix # of columns in the list store,
 			making HMAC Auth actually save itself when hitting Apply
 
